@@ -1,0 +1,4 @@
+homepage           : Úvodná stránka  --> /
+password           : Zabudnuté heslo --> /prihlasenie/password/ --> signin
+signin             : Prihlásenie     --> /prihlasenie/          --> homepage
+signup             : Registrácia     --> /registracia/          --> homepage
