@@ -1,0 +1,4 @@
+a           : A  --> /
+b           : B  --> /b/ --> a
+c           : C  --> /c/ --> b
+d           : D  --> /d/ --> c
