@@ -1,5 +1,7 @@
 BETA ======= 1.9.1 (HOTFIX)
 
+- added: new sitemap system
+
 - fixed: prevention for mail double callback calling
 - fixed: worker messaging
 
